--- a/app/sass/policy/_policy.scss
+++ b/app/sass/policy/_policy.scss
@@ -4,6 +4,7 @@
         padding-top: 175px;
     }
     h2 {
+        font-size: 44px;
         margin-bottom: 38px;
     }
     h3, h4, h5, h6 {
@@ -21,11 +22,11 @@
         padding-left: 20px;
     }
     a {
-        color: #4F2781;
+        color: #E72B5C;
         text-decoration: underline;
         transition: .2s;
         &:hover {
-            color: #4F2781;
+            color: #E72B5C;
             text-decoration: none;
         }
     }
@@ -38,6 +39,7 @@
         }
         h2 {
             margin-bottom: 20px;
+            font-size: 24px;
         }
         h3, h4, h5, h6 {
             font-size: 20px;
