--- a/app/template/main/main.html
+++ b/app/template/main/main.html
@@ -61,7 +61,7 @@
             </div>
         </div>
     </section>
-    <section class="about-main-section">
+    <section id="aboutMain" class="about-main-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-12">
