pop-up-js commit

--- a/app/sass/main/_main.scss
+++ b/app/sass/main/_main.scss
@@ -1,6 +1,9 @@
 main {
     overflow: hidden;
 }
+.directions-dance-list li > span.chosen-span::before {
+    display: none;
+}
 .section-main {
     display: flex;
     flex-direction: column;
