--- a/app/template/popup/popup.html
+++ b/app/template/popup/popup.html
@@ -1,4 +1,4 @@
-<div id="form" class="pop-up-general-block">
+<div id="form" class="pop-up-general-block active">
     <p class="form-title">Записаться на&nbsp;занятие</p>
     <form>
         <div class="input-block">
@@ -8,16 +8,16 @@
                     <label for="categorySelect2"></label>
                     <select class="input-valid select-parent" id="categorySelect2">
                         <option value="Силовые тренировки для подростков">Силовые тренировки для подростков</option>
-                        <option value="Категория2">Категория2</option>
-                        <option value="Категория3">Категория3</option>
+                        <option value="Детский танец">Детский танец</option>
+                        <option value="Baby fitness">Baby fitness</option>
                         <option value="Категория4">Категория4</option>
                     </select>
                     <div class="custom-select-head placeholder"><span>Силовые тренировки для подростков</span></div>
                     <div class="custom-select-list-wrapper">
                         <ul class="custom-select-list select-parent">
                             <li data-cat="cat1" data-value="Силовые тренировки для подростков">Силовые тренировки для подростков</li>
-                            <li data-cat="cat2" data-value="Категория2">Категория2</li>
-                            <li data-cat="cat3" data-value="Категория3">Категория3</li>
+                            <li data-cat="cat2" data-value="Детский танец">Детский танец</li>
+                            <li data-cat="cat3" data-value="Baby fitness">Baby fitness</li>
                             <li data-cat="cat4" data-value="Категория4">Категория4</li>
                         </ul>
                     </div>
